# EvoAI

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  TODO.md  doxyfile  doxyfile.in  index.html
.devops/: docs_utils.sh  install_dependencies.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml  docs.yml
cmake/: Config.cmake.in
cmake/Modules/: FindEVOAI.cmake  FindGMOCK.cmake
cmake/modules/: FindEvoAI.cmake  FindGMock.cmake  FindGTEST.cmake  FindGTest.cmake  FindJsonBox.cmake
docs/: .gitignore  CMakeLists.txt  README.md  requirements.txt
docs/conf/: conf.py.in  doxyfile.in  index.rst.in  versions.json
docs/logo/: EvoAILogo.kra
docs/source/: api.rst  getting_started.rst
docs/source/api/: namespaces.rst
examples/: CMakeLists.txt  README.md
examples/CellSim/: Averages.cpp  Averages.hpp  CMakeLists.txt  Cell.cpp  Cell.hpp  CellSim.cpp  CellSim.hpp  InfoBar.cpp  InfoBar.hpp  Options.cpp  Options.hpp  README.md  Timer.cpp  Timer.hpp  Tournament.hpp  Trainer.cpp  Trainer.hpp
examples/IrisClassification/: CMakeLists.txt  IrisClassification.cpp  README.md
examples/NumClassifier/: CMakeLists.txt  NumClassifier.cpp  README.md
examples/XOR/: CMakeLists.txt  README.md  XOR.cpp
include/: EvoAI.hpp
include/EvoAI/: Activations.hpp  Config.hpp  Connection.hpp  ConnectionGene.hpp  Connector.hpp  DataLoader.hpp  DataLoader.inl  DataSet.hpp  EvoVector.hpp  EvoVector.inl  Export.hpp  Genome.hpp  HyperNeat.hpp  Loss.hpp  NNRenderer.hpp  Neat.hpp  NeuralNetwork.hpp  Neuron.hpp  NeuronLayer.hpp  NodeGene.hpp  Optimizers.hpp  Population.hpp  Population.inl  Schedulers.hpp  SelectionAlgorithms.hpp  SelectionAlgorithms.inl  Species.hpp  Species.inl  Utils.hpp
include/EvoAI/Loss/: BinaryCrossEntropy.hpp  MeanAbsoluteError.hpp  MeanError.hpp  MeanSquaredError.hpp  MultiClassCrossEntropy.hpp
include/EvoAI/Optimizers/: Adam.hpp  SGD.hpp
include/EvoAI/Schedulers/: ConstantLR.hpp  ExponentialLR.hpp  MultiStepLR.hpp  MultiplicativeLR.hpp  StepLR.hpp
include/EvoAI/Utils/: MathUtils.hpp  NNUtils.hpp  RandomUtils.hpp  TypeUtils.hpp
latest/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js  sitemap.xml
latest/_sources/source/: examples.rst.txt  tools.rst.txt
latest/_sources/source/examples/: NumClassifier.rst.txt
latest/_sources/source/tools/: GenomeVisualizer.rst.txt  ImageGenerator.rst.txt  NeuralNetworkVisualizer.rst.txt
latest/source/: api.html  examples.html  getting_started.html  tools.html
latest/source/api/: namespaces.html
latest/source/examples/: CellSim.html  IrisClassification.html  NumClassifier.html  XOR.html
latest/source/tools/: GenomeVisualizer.html  ImageEvolver.html  ImageGenerator.html  ImageMixer.html  NeuralNetworkVisualizer.html  SoundGenerator.html
src/: Activations.cpp  Android.mk  Connection.cpp  ConnectionGene.cpp  DataSet.cpp  Genome.cpp  HyperNeat.cpp  MathUtils.cpp  NNRenderer.cpp  NNUtils.cpp  Neat.cpp  NeuralNetwork.cpp  Neuron.cpp  NeuronLayer.cpp  NodeGene.cpp  Population.cpp  RandomUtils.cpp  Species.cpp  Utils.cpp
src/Loss/: BinaryCrossEntropy.cpp  MeanAbsoluteError.cpp  MeanError.cpp  MeanSquaredError.cpp  MultiClassCrossEntropy.cpp
src/Optimizers/: Adam.cpp  SGD.cpp
src/Schedulers/: ConstantLR.cpp  ExponentialLR.cpp  MultiStepLR.cpp  MultiplicativeLR.cpp  StepLR.cpp
test/: ActivationsTest.hpp  CMakeLists.txt  ConnectionGeneTest.hpp  ConnectionTest.hpp  EvoVectorTest.hpp  GenomeTest.hpp  HyperNeatTest.hpp  LossTest.hpp  NeuralNetworkTest.hpp  NeuronLayerTest.hpp  NeuronTest.hpp  NodeGeneTest.hpp  OptimizersTest.hpp  PopulationTest.hpp  RunAllTests.cpp  SchedulersTest.hpp  SpeciesTest.hpp  UtilsTest.hpp
test/ActivationsTest/: ActivationsTest.hpp
test/ConnectionGeneTest/: ConnectionGeneTest.hpp
test/ConnectionTest/: ConnectionTest.hpp
test/Genome/: CMakeLists.txt  Genome.cpp
test/GenomeTest/: GenomeTest.hpp
test/HyperNeatTest/: HyperNeatTest.hpp
test/NeuralNetwork/: CMakeLists.txt  NeuralNetwork.cpp
test/NeuralNetworkTest/: NeuralNetworkTest.hpp
test/NeuralNetworkVisualizer/: CMakeLists.txt
test/Neuron/: CMakeLists.txt  Neuron.cpp
test/NeuronLayer/: CMakeLists.txt  NeuronLayer.cpp
test/NeuronLayerTest/: NeuronLayerTest.hpp
test/NeuronTest/: NeuronTest.hpp
test/NodeGeneTest/: NodeGeneTest.hpp
test/PopulationTest/: PopulationTest.hpp
test/SpeciesTest/: SpeciesTest.hpp
test/UtilsTest/: UtilsTest.hpp
test/XOR/: CMakeLists.txt  XOR.cpp
tools/: CMakeLists.txt  README.md  requirements.txt  showMultiLinePlot.py
tools/GenomeVisualizer/: CMakeLists.txt  GRenderer.cpp  GRenderer.hpp  GenomeVisualizer.cpp  README.md
tools/ImageEvolver/: CMakeLists.txt  ImageEvolver.cpp  README.md
tools/ImageGenerator/: CMakeLists.txt  ImageGenerator.cpp  README.md  imageUtils.cpp  imageUtils.hpp
tools/ImageMixer/: CMakeLists.txt  ImageMixer.cpp  README.md
tools/NeuralNetworkVisualizer/: CMakeLists.txt  NNRenderer.cpp  NNRenderer.hpp  NeuralNetworkVisualizer.cpp  README.md
tools/SoundGenerator/: CMakeLists.txt  MidiAudio.cpp  MidiAudio.hpp  README.md  RawAudio.cpp  RawAudio.hpp  SoundGenerator.cpp  soundUtils.cpp  soundUtils.hpp
v1.0/: genindex.html  index.html  objects.inv  search.html  searchindex.js  sitemap.xml
v1.0/_sources/source/examples/: CellSim.rst.txt  IrisClassification.rst.txt  XOR.rst.txt
v1.0/_sources/source/tools/: ImageEvolver.rst.txt  ImageMixer.rst.txt  SoundGenerator.rst.txt
v1.0/_static/: versions.json
v1.0/source/: api.html  examples.html  getting_started.html
v1.0/source/api/: namespaces.html
v1.0/source/examples/: CellSim.html  IrisClassification.html  NumClassifier.html  XOR.html
v1.0/source/tools/: GenomeVisualizer.html  ImageEvolver.html  ImageGenerator.html  ImageMixer.html  NeuralNetworkVisualizer.html  SoundGenerator.html
